avoid overlapping caret

--- a/tempelhof/assets/scss/components/_docs.scss
+++ b/tempelhof/assets/scss/components/_docs.scss
@@ -12,6 +12,7 @@
     padding: $padding / 2;
     color: inherit;
     background-color: $bg-secondary;
+    padding-right: 1em;
 
     h2 {
         font-size: $font-size-lg;
